# px4-offboard

./: .gitignore  .gitmodules  README.md
src/offboard-control/: CMakeLists.txt  package.xml
src/offboard-control/launch/: offboard.launch.py
src/offboard-control/src/: attitude-test.cpp
